# robot_bombero_uao

./: README.md
robot_bombero_bringup/: CMakeLists.txt  package.xml
robot_bombero_bringup/config/: controllers.yaml
robot_bombero_bringup/launch/: bringup.launch.py  bringup_pc.launch.py  bringup_raspberry.launch.py
robot_bombero_control_node/: CMakeLists.txt  package.xml
robot_bombero_control_node/include/robot_bombero_control_node/: firebot_control_node.hpp
robot_bombero_control_node/src/: firebot_control_node.cpp
robot_bombero_controller/: CMakeLists.txt  package.xml  pluginlib_arm.xml  pluginlib_mecanum.xml  plugins.xml
robot_bombero_controller/include/robot_bombero_controller/: arm_servo_controller.hpp  mecanum_controller.hpp  sensor_state_publisher_controller.hpp
robot_bombero_controller/src/: arm_servo_controller.cpp  mecanum_controller.cpp  sensor_state_publisher_controller.cpp
robot_bombero_description/: CMakeLists.txt  package.xml  robot.gv  robot.urdf
robot_bombero_description/launch/: view_robot.launch.py
robot_bombero_description/urdf/: arm.xacro  camera.xacro  chasis.xacro  pump.xacro  robot.urdf.xacro  ros2_control.xacro  sensors.xacro  transmission.xacro  wheels.xacro
robot_bombero_hardware/: CMakeLists.txt  package.xml  pluginlib.xml
robot_bombero_hardware/config/: firebot_hardware.yaml
robot_bombero_hardware/include/robot_bombero_hardware/: firebot_hardware_interface.hpp  serial_port.hpp
robot_bombero_hardware/src/: firebot_hardware_interface.cpp  serial_port.cpp
robot_bombero_msgs/: CMakeLists.txt  package.xml
robot_bombero_msgs/msg/: FireStatus.msg  ThermalData.msg
robot_bombero_safety/: CMakeLists.txt  package.xml
robot_bombero_safety/include/robot_bombero_safety/: safety_node.hpp
robot_bombero_safety/src/: safety_node.cpp
robot_bombero_teleop/: package.xml  setup.cfg  setup.py
robot_bombero_teleop/robot_bombero_teleop/: teleop_node.py
robot_bombero_tests/: CMakeLists.txt  package.xml
robot_bombero_tests/test/: test_urdf_xacro.py
robot_bombero_uao/: CMakeLists.txt  package.xml
robot_bombero_vision/: package.xml  setup.cfg  setup.py
robot_bombero_vision/launch/: raspberry_camera_launch.py  vision_launch.py
robot_bombero_vision/robot_bombero_vision/: __init__.py  raspberry_camera_node.py  vision_node.py
