<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bombero_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package to launch all subsystems of the Robot Bombero</description>
  <maintainer email="sofia.castano@uao.edu.co">sofia</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <!-- <exec_depend>robot_bombero_control_node</exec_depend>
  <exec_depend>robot_bombero_safety</exec_depend>
  <exec_depend>robot_bombero_teleop</exec_depend>
  <exec_depend>robot_bombero_pump</exec_depend>
  <exec_depend>robot_bombero_vision</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
