<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bombero_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package to launch all subsystems of the Robot Bombero</description>
  <maintainer email="sofia.castano@uao.edu.co">sofia</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>controller_manager</depend>
  <depend>robot_bombero_controller</depend>
  <depend>robot_bombero_description</depend>
  <depend>robot_bombero_hardware</depend>
  <depend>robot_bombero_teleop</depend>
  <depend>robot_bombero_vision</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
