<?xml version="1.0"?>
<package format="3">
  <name>robot_bombero_controller</name>
  <version>0.0.1</version>
  <description>Controladores personalizados para el robot bombero UAO.</description>
  <maintainer email="sofia@uao.edu.co">Sofía Milagros</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>ament_cmake</exec_depend>

  <export>
    <pluginlib plugin="${prefix}/share/robot_bombero_controller/plugins.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
