<?xml version="1.0"?>
<package format="3">
  <name>robot_bombero_safety</name>
  <version>0.1.0</version>
  <description>Safety node for robot bombero: monitors IR and IMU sensors and stops robot if obstacle or tilt detected.</description>

  <maintainer email="tu_email@example.com">Tu Nombre</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
